<resources>
    <!-- GENERAL STRINGS -->
    <string name="app_name">Coinz</string>
    <string name="Coinz">Coinz</string>
    <string name="LoadingData">Loading&#8230;</string>
    <string name="DownloadDataFail">Failed to download user data. Check your internet connection.</string>
    <string name="UpdateDataFail">Failed to update user data. Check your internet connection.</string>
    <string name="DownloadMapDataFail">Failed to download map data. Check your internet connection.</string>
    <string name="access_token">pk.eyJ1IjoibTBudGVzIiwiYSI6ImNqbnZwejhqMDAwbDYzdm11Mm1td3lncDAifQ.1hbLQjREfwCIqq289JfPig</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Coinz</string>

    <!-- BANK ACTIVITY -->
    <string name="Bank">Bank</string>
    <string name="exchangeRates">Exchange Rates</string>
    <string name="Placeholder_zero">0</string>
    <string name="QUID">QUID</string>
    <string name="PENY">PENY</string>
    <string name="DOLR">DOLR</string>
    <string name="SHIL">SHIL</string>
    <string name="GOLD">GOLD</string>
    <string name="Currency">Currency</string>
    <string name="Value">Value</string>
    <string name="Exchange">Exchange</string>
    <string name="Transfer">Transfer</string>
    <string name="ExchangesLeftPlaceholder">You can exchange 25 Coinz</string>
    <string name="ExchangeCoinz">You can exchange %1$d Coinz</string>
    <string name="RatesValue">%1$.3f</string>
    <string name="GoldAmount">%1$.1f</string>
    <string name="NoExchangesLeft">Come back tomorrow to exchange more Coinz</string>
    <string name="SomeExchangesLeft">You need to exchange 25 Coinz first</string>
    <string name="TransferSameEmail">You cannot transfer Coinz to yourself</string>
    <string name="FaieldTransferGOLD">Failed to transfer GOLD. Check your internet connection.</string>
    <string name="SuccessfulTransfer">Coin successfully transferred</string>

    <!-- RANKING ACTIVITY -->
    <string name="PlayerRanking">Player Ranking</string>
    <string name="RankingNoPlayers">Failed to download players ranking. Check your internet connection.</string>

    <!-- QUEST ACTIVITY -->
    <string name="DailyQuests">Daily Quests</string>
    <string name="NoDailyQuests">There are no more quests today.</string>
    <string name="NewDailyQuest">New quest added</string>
    <string name="DailyQuestsFailDownload">Failed to download quests. Check your internet connection.</string>
    <string name="DailyQuestsFailUpdate">Failed to update quests data. Check your internet connection.</string>
    <string name="RerollQuest">Reroll</string>
    <string name="QuestCompleted">Quest Completed!</string>

    <!-- TRANSFER HISTORY ACTIVITY -->
    <string name="TransferHistory">Transfer History</string>
    <string name="TransferHistoryFailDownload">Failed to download transfer history. Check your internet connection.</string>
    <string name="TransferHistoryFailUpdate">Failed to update transfer history. Check your internet connection.</string>
    <string name="NoTransfers">There are no transfers in your history</string>
    <string name="DeleteAll">Delete All</string>
    <string name="Delete">Delete</string>

    <!-- RACE ACTIVITY -->
    <string name="RaceMode">Race Mode</string>
    <string name="Amount">Amount:</string>
    <string name="Time">Time:</string>
    <string name="WagerOfferPlaceholder">You can wager 500 GOLD</string>
    <string name="WagerOffer">Do you want to wager %1$d GOLD?</string>
    <string name="Wager">Wager!</string>
    <string name="AlreadyWageredToday">You have already wagered today</string>
    <string name="WagerHappeningNow">There is wager happening now!</string>
    <string name="WagerNotEnoughGOLD">You don\'t have enough GOLD</string>
    <string name="WagerNotEnoughCoinz">There are too few Coinz on the map</string>

    <!-- MAIN ACTIVITY -->
    <string name="WagerTimer">Time Left: %1$02d:%2$02d, %3$d/%4$d</string>
    <string name="WagerSuccess">Congratulations!</string>
    <string name="WagerFailure">Better luck next time</string>

    <!-- SINGUP / LOGIN ACTIVITY -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_up_google">Register with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="BackToRegistration">Back to Registration</string>
    <string name="action_already_registered">Already have an account</string>

    <!-- ERRORS -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_too_long_username">This username is too long</string>
    <string name="error_incorrect_email">We can\'t find that account</string>
    <string name="error_no_network_connection">Check your network connection</string>
    <string name="error_firebase_no_network_connection">A network error (such as timeout, interrupted connection or unreachable host) has occurred.</string>
    <string name="error_firebase_incorrect_email">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_firebase_incorrect_password">The password is invalid or the user does not have a password.</string>
    <string name="error_firebase_user_already_exists">The email address is already in use by another account.</string>
    <string name="action_user_already_exists">This user already exists</string>
    <string name="error_something_else_wrong">Something went wrong, try again later.</string>
    <string name="error_location_services_disabled">Enable location services to play the game.</string>
    <string name="error_invalid_date_and_time">Set current Date and Time</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_username">This username is too short</string>

</resources>
